# LegV8-Cpp

./: .gitignore  CMakeLists.txt  LICENSE  assembly.s  instructions  main.cpp  readme.md  test.s
Compiler/: parser.h
Components/: ALU.h  Memory.h  Processor.cpp  Processor.h  ProgramCounter.cpp  ProgramCounter.h  RegisterBank.cpp  RegisterBank.h  SignExtend.cpp  SignExtend.h  Types.h
Components/Controls/: AluControl.h  Control.h  ControlUnit.h  Signal.cpp  Signal.h
Display/: Display.cpp  Display.h
cmake_modules/: FindSFML.cmake
